--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "material-table": "^1.69.2",
     "moment": "^2.29.1",
     "react": "^17.0.1",
+    "react-device-detect": "^1.17.0",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
     "react-hook-form": "^5.7.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "react-select": "^4.3.1",
+    "swiper": "^6.7.5",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
