--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
     "react-hook-form": "^5.7.2",
+    "react-image-file-resizer": "^0.4.7",
+    "react-resize-image": "^1.0.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "react-select": "^4.3.1",
